--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>PokeFinder</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <title>PokeFinder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
