--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="../src/Images/pokeball.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>PokeFinder</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <title>PokeFinder</title>
+    <!-- <link rel="shortcut icon" href="../src/Images/pokeball.png" /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
